--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>RAPUNZEL</title>
+    <title>Stranger things </title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -46,7 +46,7 @@
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
                     <img src="img/enroladoss.jpeg" class="mb-3" width="563"
                         height="278" loading="lazy">
-                    <a href="#NROLADOS"
+                    <a href="#Stranger things "
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
@@ -61,7 +61,7 @@
                     <img src="img/bravo.jpeg" class="rounded-pill" alt="" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>Sobre o filme RAPUNZEL ?</h2>
+                    <h2>Sobre a serie Stranger things  ?</h2>
                     <p class="p-2"> "Rapunzel" conta a história de uma princesa de cabelos longos mágicos que é mantida presa em uma torre por uma bruxa má. Quando um ladrão chamado Flynn Rider se esconde em sua torre, Rapunzel o força a ajudá-la a escapar para que ela possa ver as luzes flutuantes que aparecem no céu todas as noites. Ao longo de sua jornada, eles enfrentam muitos desafios e descobrem segredos sobre o passado de Rapunzel. No final, Rapunzel se reúne com seus pais, que são o rei e a rainha, e ela e Flynn vivem felizes para sempre.                      </p>
                 </div>
             </div>
